[gd_scene load_steps=19 format=3 uid="uid://ds70pbbdbtgkc"]

[ext_resource type="Script" path="res://src/game/characters/Character/character.gd" id="1_t5npn"]
[ext_resource type="Texture2D" uid="uid://c0f5vmqc2aydb" path="res://assets/textures/player/dash_meter.png" id="2_272cq"]
[ext_resource type="Script" path="res://src/game/scripts/states/state_machine.gd" id="2_ijblu"]
[ext_resource type="Script" path="res://src/game/characters/Character/weapon_manager.gd" id="3_54588"]
[ext_resource type="Script" path="res://src/game/characters/Character/states/idle_state.gd" id="3_eoqu7"]
[ext_resource type="Texture2D" uid="uid://c8ceseoxkdnpp" path="res://assets/textures/player/dash_meter_under.png" id="3_i6mxq"]
[ext_resource type="Script" path="res://src/game/characters/Character/upgrade_manager.gd" id="4_5ataj"]
[ext_resource type="Script" path="res://src/game/characters/Character/dash_bar.gd" id="4_h5d68"]
[ext_resource type="Script" path="res://src/game/characters/Character/states/movement_state.gd" id="4_nl2ik"]
[ext_resource type="Script" path="res://src/game/characters/Character/dash_state.gd" id="5_eluuy"]
[ext_resource type="PackedScene" uid="uid://coxol6ouwyseu" path="res://src/game/effects/ghost.tscn" id="6_axiyh"]
[ext_resource type="Script" path="res://src/game/scripts/components/hurt_box_component.gd" id="9_kk872"]
[ext_resource type="AudioStream" uid="uid://dyoxlhub70b8l" path="res://assets/sound/hit_player.wav" id="9_n2il3"]
[ext_resource type="Texture2D" uid="uid://b8fiq01ltgq7w" path="res://assets/textures/ui/reload/reload_base.png" id="10_bxf7v"]
[ext_resource type="Script" path="res://src/game/scripts/components/hurt_component.gd" id="10_xcugp"]
[ext_resource type="Texture2D" uid="uid://b61mmn65g043m" path="res://assets/textures/ui/reload/reload_over.png" id="11_7xkux"]
[ext_resource type="Script" path="res://src/game/characters/Character/reload_bar.gd" id="12_5prya"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cfa88"]
radius = 52.6709

[node name="Character" type="CharacterBody2D"]
position = Vector2(401, 225)
scale = Vector2(2, 2)
collision_mask = 5
motion_mode = 1
script = ExtResource("1_t5npn")

[node name="DashBar" type="TextureProgressBar" parent="."]
offset_left = -10.0
offset_top = -55.5
offset_right = 30.0
offset_bottom = -15.5
scale = Vector2(0.5, 0.5)
value = 100.0
fill_mode = 3
nine_patch_stretch = true
texture_over = ExtResource("2_272cq")
texture_progress = ExtResource("3_i6mxq")
script = ExtResource("4_h5d68")

[node name="DashDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.33333)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("actor", "initial_state")]
script = ExtResource("2_ijblu")
actor = NodePath("..")
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("weapon_manager")]
script = ExtResource("3_eoqu7")
weapon_manager = NodePath("../../WeaponManager")

[node name="Movement" type="Node2D" parent="StateMachine"]
script = ExtResource("4_nl2ik")

[node name="Dash" type="Node2D" parent="StateMachine"]
script = ExtResource("5_eluuy")
ghost_scene = ExtResource("6_axiyh")

[node name="DashDuration" type="Timer" parent="StateMachine/Dash"]
one_shot = true

[node name="GhostTimer" type="Timer" parent="StateMachine/Dash"]
wait_time = 0.1

[node name="UpgradeManager" type="Node2D" parent="."]
script = ExtResource("4_5ataj")

[node name="WeaponManager" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("3_54588")
actor = NodePath("..")

[node name="Hand" type="Sprite2D" parent="WeaponManager"]
z_index = 10
scale = Vector2(2, 2)

[node name="ItemsManager" type="Node2D" parent="."]

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("9_kk872")
invincibility_duration = 0.5

[node name="PickUpArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource("CircleShape2D_cfa88")

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("player_sfx", "hurtbox_component", "sprite", "actor")]
script = ExtResource("10_xcugp")
hit_player_sfx = ExtResource("9_n2il3")
player_sfx = NodePath("../PlayerSfx")
hurtbox_component = NodePath("../HurtboxComponent")
sprite = NodePath("../Sprite")
actor = NodePath("..")

[node name="ReloadBar" type="TextureProgressBar" parent="."]
offset_left = -16.0
offset_top = -36.0
offset_right = 48.0
offset_bottom = 4.0
scale = Vector2(0.5, 0.5)
value = 30.0
fill_mode = 6
texture_under = ExtResource("10_bxf7v")
texture_progress = ExtResource("11_7xkux")
script = ExtResource("12_5prya")

[node name="PlayerSfx" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="timeout" from="DashDelayTimer" to="." method="_on_dash_delay_timeout"]
[connection signal="timeout" from="StateMachine/Dash/DashDuration" to="StateMachine/Dash" method="_on_dash_duration_timeout"]
[connection signal="timeout" from="StateMachine/Dash/GhostTimer" to="StateMachine/Dash" method="_on_ghost_timer_timeout"]
